Add(profile): make profile stats more maintainable
The old code was the definition of bad. Like, hell, I didn't wanna touch it from a mile away. But I had to. Now it's nicer. Not nice, but nicer.

This is NOT done. It works, but the display isn't as pretty as you'd want it to be!